i added the content of the body and i used tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Eladio Carrión</title>
     <link href="./output.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -18,6 +19,29 @@
     </script>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <h1 class="text-5xl font-serif text-center my-6 font-semibold">
+      Eladio Carrión
+    </h1>
+    <div class="flex bg-lime-100 items-center justify-around">
+      <div class="text-center rounded-lg block mx-3 p-2.5 w-96">
+        <h2 class="font-serif text-3xl py-2 ms-12">Biografía</h2>
+        <p class="text-lg pb-4 px-4">
+          Eladio Carrión, nacido el 14 de noviembre de 1994 en Kansas City,
+          Missouri, es un rapero y compositor puertorriqueño que se crió en
+          Puerto Rico. Inicialmente conocido por su presencia en redes sociales
+          como Vine, Eladio dejó su carrera como nadador profesional para
+          dedicarse a la música, donde ha destacado en la escena del trap
+          latino. Con su estilo único que mezcla trap, reggaetón y hip-hop, ha
+          lanzado éxitos como "Mi Error" y "Kemba Walker" junto a Bad Bunny,
+          consolidándose como una figura prominente del género urbano.
+        </p>
+      </div>
+      <div>
+        <img
+          src="https://i.pinimg.com/originals/91/31/00/91310082a9d3c3182fafc2d89fbe9f8a.jpg"
+          class="w-96 h-[32rem] p-4"
+        />
+      </div>
+    </div>
   </body>
 </html>
