i added a menu, i need to update it

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,27 @@
     </script>
   </head>
   <body>
+    <div class="box-border font-serif">
+      <header class="flex items-center justify-between p-2 bg-[#ececec]">
+        <img
+          src="https://i.pinimg.com/736x/1b/94/a9/1b94a9d70636f02fe8ef7aa867f4bb84.jpg"
+          alt="logo"
+          class="max-w-20"
+        />
+        <button class="hidden">Abrir</button>
+        <nav>
+          <ul class="flex list-none gap-12 pr-12">
+            <li>Inicio</li>
+            <li>Quienes somos</li>
+            <li>Servicios</li>
+            <li>Qué hacemos</li>
+            <li>Contacto</li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+    <!-- mejorar menu hamburguesa -->
+
     <h1 class="text-5xl font-serif text-center my-6 font-semibold">
       Eladio Carrión
     </h1>
