i changed the font-family of h1. I used google fonts ['New_Amsterdam']

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eladio Carrión</title>
     <link href="./output.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=New+Amsterdam&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -40,7 +46,7 @@
     </div>
     <!-- mejorar menu hamburguesa -->
 
-    <h1 class="text-5xl font-serif text-center my-6 font-semibold">
+    <h1 class="text-5xl font-['New_Amsterdam'] text-center my-6 font-semibold">
       Eladio Carrión
     </h1>
     <div class="flex bg-lime-100 items-center justify-around">
